bugfix for header overlaying scrollbar and mobile init load not on top of the page

--- a/nexuse2e-webapp/src/main/frontend/src/app/app.component.scss
+++ b/nexuse2e-webapp/src/main/frontend/src/app/app.component.scss
@@ -1,7 +1,6 @@
 @import '../styles.scss';
 
 .content-container {
-  padding-top: 50px;
   box-sizing: border-box;
   height: 100vh;
   overflow-x: hidden;
@@ -11,6 +10,5 @@
 @media(min-width: $desktopBreakpoint) {
   .content-container {
     margin-left: 350px;
-    padding-top: 85px;
   }
 }
