--- a/nexuse2e-webapp/src/main/frontend/src/app/header/header.component.scss
+++ b/nexuse2e-webapp/src/main/frontend/src/app/header/header.component.scss
@@ -4,7 +4,6 @@ header {
   background: $gray1;
   height: 50px;
   width: 100%;
-  position: fixed;
   z-index: 100;
 
   .left-section {
@@ -67,6 +66,7 @@ header {
         background: $gray5;
         border-bottom: 1px solid $gray4;
         box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12);
+        z-index: 100;
 
         .mat-icon-button {
           display: none;
