--- a/nexuse2e-webapp/src/main/frontend/src/app/navigation/navigation.component.scss
+++ b/nexuse2e-webapp/src/main/frontend/src/app/navigation/navigation.component.scss
@@ -6,7 +6,6 @@
   margin-left: -100%;
   height: 100vh;
   overflow: scroll;
-  padding-top: 50px;
   box-sizing: border-box;
   position: absolute;
   transition: margin-left 0.5s;
@@ -63,7 +62,6 @@
 
 @media(min-width: $desktopBreakpoint) {
   .navigation {
-    padding-top: 75px;
     box-shadow: none;
     border: none;
     margin-left: 0;
